# saude-repo

./: Dockerfile  README.md  docker-compose.yml  manage.py  pyproject.toml
consultas/: models.py  tests.py  urls.py  views.py
consultas/migrations/: 0001_initial.py
lacrei_saude/: asgi.py  settings.py  urls.py  wsgi.py
