[tool.poetry]
name = "saude-repo"
package-mode = false
version = "0.1.0"
description = ""
authors = ["Diego Cavalcanti <cavalcantidiego@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
django = "^5.1.6"
djangorestframework = "^3.15.2"
psycopg2 = "^2.9.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
